fix key generation using string