@@ -1,6 +1,13 @@
 package org.openbaton.utils.key;
 
-import static org.apache.commons.codec.binary.Base64.encodeBase64;
+import sun.misc.BASE64Decoder;
+import sun.misc.BASE64Encoder;
+
+import org.apache.commons.codec.binary.Base64;
+import org.apache.commons.codec.binary.Hex;
+import org.apache.commons.text.RandomStringGenerator;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 
 import java.io.ByteArrayOutputStream;
 import java.io.DataOutputStream;
@@ -15,22 +22,21 @@ import java.security.KeyPair;
 import java.security.KeyPairGenerator;
 import java.security.MessageDigest;
 import java.security.NoSuchAlgorithmException;
-import java.security.NoSuchProviderException;
 import java.security.PublicKey;
 import java.security.interfaces.RSAPublicKey;
-import java.security.spec.InvalidKeySpecException;
+import java.util.Random;
+
 import javax.crypto.BadPaddingException;
 import javax.crypto.Cipher;
 import javax.crypto.IllegalBlockSizeException;
-import javax.crypto.KeyGenerator;
 import javax.crypto.NoSuchPaddingException;
 import javax.crypto.spec.SecretKeySpec;
-import org.apache.commons.codec.binary.Base64;
-import org.apache.commons.codec.binary.Hex;
-import org.slf4j.Logger;
-import org.slf4j.LoggerFactory;
 
-/** Created by lto on 04/04/2017. */
+import static org.apache.commons.codec.binary.Base64.encodeBase64;
+
+/**
+ * Created by lto on 04/04/2017.
+ */
 public class KeyHelper {
 
   private static final Logger log = LoggerFactory.getLogger(KeyHelper.class);
@@ -38,19 +44,24 @@ public class KeyHelper {
   public static String DESEDE_ALGORITHM = "DESede";
   public static String AES_ALGORITHM = "AES";
 
-  public static Key genKey() throws NoSuchAlgorithmException, IOException {
-    KeyGenerator generator = KeyGenerator.getInstance(AES_ALGORITHM);
-    generator.init(128);
-    return generator.generateKey();
+  public static String genKey() throws NoSuchAlgorithmException, IOException {
+    // Using Apache Commons RNG for randomness
+    Random rng = new Random();
+    // Generates a 20 code point string, using only the letters a-z
+    RandomStringGenerator generator = new RandomStringGenerator.Builder().withinRange('A', 'z').build();
+    return generator.generate(16);
   }
 
   public static Key restoreKey(byte[] keyBytes) {
     return new SecretKeySpec(keyBytes, AES_ALGORITHM);
   }
 
-  private static byte[] encrypt(byte[] bytes, Key key)
-      throws BadPaddingException, IllegalBlockSizeException, InvalidKeyException,
-          NoSuchPaddingException, NoSuchAlgorithmException {
+  private static byte[] encrypt(byte[] bytes, Key key) throws
+                                                       BadPaddingException,
+                                                       IllegalBlockSizeException,
+                                                       InvalidKeyException,
+                                                       NoSuchPaddingException,
+                                                       NoSuchAlgorithmException {
 
     Cipher cipher = Cipher.getInstance(AES_ALGORITHM);
     cipher.init(Cipher.ENCRYPT_MODE, key);
@@ -58,41 +69,79 @@ public class KeyHelper {
     return cipher.doFinal(bytes);
   }
 
-  public static byte[] encrypt(String text, Key key)
-      throws NoSuchPaddingException, NoSuchAlgorithmException, InvalidKeyException,
-          BadPaddingException, IllegalBlockSizeException {
+  public static byte[] encrypt(String text, Key key) throws
+                                                     NoSuchPaddingException,
+                                                     NoSuchAlgorithmException,
+                                                     InvalidKeyException,
+                                                     BadPaddingException,
+                                                     IllegalBlockSizeException {
 
     return encrypt(text.getBytes(StandardCharsets.UTF_8), key);
   }
 
-  public static String decrypt(byte[] bytes, Key key)
-      throws NoSuchPaddingException, NoSuchAlgorithmException, InvalidKeyException,
-          BadPaddingException, IllegalBlockSizeException {
+  public static String encryptNew(String valueToEnc, String keyValue) throws
+                                                                      NoSuchPaddingException,
+                                                                      NoSuchAlgorithmException,
+                                                                      InvalidKeyException,
+                                                                      BadPaddingException,
+                                                                      IllegalBlockSizeException {
+    Key key = generateKey(keyValue.getBytes());
+    Cipher c = Cipher.getInstance(AES_ALGORITHM);
+    c.init(Cipher.ENCRYPT_MODE, key);
+    byte[] encValue = c.doFinal(valueToEnc.getBytes());
+    String encryptedValue = new BASE64Encoder().encode(encValue);
+    return encryptedValue;
+  }
+
+  public static String decryptNew(String encryptedValue, String keyValue) throws
+                                                                          NoSuchPaddingException,
+                                                                          NoSuchAlgorithmException,
+                                                                          InvalidKeyException,
+                                                                          IOException,
+                                                                          BadPaddingException,
+                                                                          IllegalBlockSizeException {
+    Key key = generateKey(keyValue.getBytes());
+    Cipher c = Cipher.getInstance(AES_ALGORITHM);
+    c.init(Cipher.DECRYPT_MODE, key);
+    byte[] decordedValue = new BASE64Decoder().decodeBuffer(encryptedValue);
+    byte[] decValue = c.doFinal(decordedValue);
+    String decryptedValue = new String(decValue);
+    return decryptedValue;
+  }
+
+  private static Key generateKey(byte[] keyValue) {
+    Key key = new SecretKeySpec(keyValue, AES_ALGORITHM);
+    return key;
+  }
+
+  public static String decrypt(byte[] bytes, Key key) throws
+                                                      NoSuchPaddingException,
+                                                      NoSuchAlgorithmException,
+                                                      InvalidKeyException,
+                                                      BadPaddingException,
+                                                      IllegalBlockSizeException {
     Cipher cipher = Cipher.getInstance(AES_ALGORITHM);
     cipher.init(Cipher.DECRYPT_MODE, key);
     return new String(cipher.doFinal(bytes), StandardCharsets.UTF_8);
   }
 
-  public static String decrypt(String bytes, Key key)
-      throws IllegalBlockSizeException, InvalidKeyException, BadPaddingException,
-          NoSuchAlgorithmException, NoSuchPaddingException {
+  public static String decrypt(String bytes, Key key) throws
+                                                      IllegalBlockSizeException,
+                                                      InvalidKeyException,
+                                                      BadPaddingException,
+                                                      NoSuchAlgorithmException,
+                                                      NoSuchPaddingException {
 
     return decrypt(bytes.getBytes(StandardCharsets.ISO_8859_1), key);
   }
 
-  public static String encryptToString(String text, Key key)
-      throws NoSuchAlgorithmException, NoSuchPaddingException, InvalidKeyException,
-          BadPaddingException, IllegalBlockSizeException {
+  public static String encryptToString(String text, Key key) throws
+                                                             NoSuchAlgorithmException,
+                                                             NoSuchPaddingException,
+                                                             InvalidKeyException,
+                                                             BadPaddingException,
+                                                             IllegalBlockSizeException {
     return new String(encrypt(text, key), StandardCharsets.ISO_8859_1);
-  }
-
-  public static void main(String[] args)
-      throws NoSuchAlgorithmException, NoSuchProviderException, InvalidKeySpecException,
-          IOException {
-    //    KeyHelper.parsePublicKey(
-    //        "ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAABAQCMK" +
-    //
-    // "/Jp56ykfSNoEQalX9HYS2VqM9cQwcBvhmryp6I5PIYpJ7b2cRexygKrFNG994Xg7WghnOHIuxR89Z5kSOilaVx91Wid1Ez7ftNpFvyxv8CJ59Ry5R/OQ3zAFlsWdov+QJh5s7zlbh3P1m2PbhrJ0Q7Qe7J4uTXwXDT2K0a9EOHSc9iZ5dWGTAxz0LtyWEDdLHwSjmg4LvQwmWsFs9P+k0WTJH3efYvTmsBHmo3n4XiPKUIpoO3MQycFedOkGvo/LlRlktp9mdz+HIZBJL3tLzUcRERUOVsUwlFPWGdYp0Urpvb6gSMkOFFAb1LwZU3xeD0oN7qlsa1xZaTbU6a1 test");
   }
 
   /*
@@ -148,7 +197,7 @@ public class KeyHelper {
   private String encodePublicKey(RSAPublicKey key, String keyname) throws IOException {
     ByteArrayOutputStream out = new ByteArrayOutputStream();
     /* encode the "ssh-rsa" string */
-    byte[] sshrsa = new byte[] {0, 0, 0, 7, 's', 's', 'h', '-', 'r', 's', 'a'};
+    byte[] sshrsa = new byte[]{0, 0, 0, 7, 's', 's', 'h', '-', 'r', 's', 'a'};
     out.write(sshrsa);
     /* Encode the public exponent */
     BigInteger e = key.getPublicExponent();
@@ -177,5 +226,16 @@ public class KeyHelper {
     keyGen.initialize(2048);
     KeyPair keyPair = keyGen.genKeyPair();
     return keyPair;
+  }
+
+  public static void main(String[] args) throws Exception {
+    String key = genKey();
+    System.out.println("Key is: " + key);
+    String message = "long message to be encrypted";
+    System.out.println("Value clean: " + message);
+    String res = KeyHelper.encryptNew(message, key);
+    System.out.println("Value encrypted: " + res);
+    message = KeyHelper.decryptNew(res, key);
+    System.out.println("Value cleat: " + message);
   }
 }
